[2018-06-09 01:13:34 +0200]  Fixes cache page bug                                                       karasu      {dddc1a45}
[2018-06-09 01:08:57 +0200]  Add missing tooltip                                                        karasu      {1d55f0c7}
[2018-06-09 01:02:32 +0200]  Fixed typos                                                                karasu      {7c45b1a8}
[2018-06-09 01:00:55 +0200]  Working this out.                                                          karasu      {c688ab9b}
[2018-06-08 20:28:08 +0200]  Edit dialog done. Create and Edit dialogs should have a common pare..      karasu      {08d602fb}
[2018-06-08 09:36:54 +0200]  luks settings done                                                         karasu      {c8d21a89}
[2018-06-07 23:45:01 +0200]  Working on luks settings dialog and create partition dialog (wip)          karasu      {2b5503da}
[2018-06-06 18:03:04 +0200]  Working on splitting advanced code (wip)                                   karasu      {a98d311b}
[2018-06-05 22:42:14 +0200]  moving advanced dialogs (ui and py) to individual files (wip)              karasu      {8f18a587}
[2018-06-04 22:54:36 +0200]  Remove "is not None"                                                       karasu      {c8731060}
[2018-06-04 22:50:50 +0200]  Small fixes in advanced                                                    karasu      {f0ca1fe9}
[2018-06-04 22:45:32 +0200]  Fix import                                                                 karasu      {48ca94aa}
[2018-06-04 22:22:40 +0200]  Working on making advanced module smaller (first step, moving treev..      karasu      {5c84add1}
[2018-06-04 13:18:12 +0200]  Move partition treeview from advanced.py to partition_treeview.py (..      karasu      {bd64de3e}