@@ -1,3 +1,4 @@
+[2018-06-09 01:40:39 +0200]  Fixed translations in create/edit partition dialog                         karasu      {c326a178}
 [2018-06-09 01:13:34 +0200]  Fixes cache page bug                                                       karasu      {dddc1a45}
 [2018-06-09 01:08:57 +0200]  Add missing tooltip                                                        karasu      {1d55f0c7}
 [2018-06-09 01:02:32 +0200]  Fixed typos                                                                karasu      {7c45b1a8}
